# openclaw-longmen-inn

./: .gitignore  01-龙门客栈多Agent业务方案.md  AI_Daily_Briefing_2026-03-22.md  CREATE_STRUCTURE.ps1  INN_RULES.md  LEDGER.md  LICENSE  README.md  README_CN.md  ROSTER.md  SKILL_SYNC_GUIDE.md  UPDATE_SUMMARY.md  audit_log.jsonl  check_db.py
docs/: AGENT_WORKSPACE_DESIGN.md  WORKFLOW.md  index.html  skill-creator-implementation.md
projects/longmen-inn-system/: .flake8  .gitignore  .gitmessage  .pylintrc  BUG修复与页面调整文档.md  LEDGER.md  PRD.md  PROGRESS.md  README.md  backup-local.ps1  pyproject.toml  start-services.ps1  stop-services.ps1
projects/longmen-inn-system/.github/workflows/: ci.yml
projects/longmen-inn-system/backend/: .flake8  debug_path.py  init_db.py  init_users.py  main.py  pyproject.toml  requirements.txt  test_activities_api.py  test_api.py  test_api_online.py  test_db.py
projects/longmen-inn-system/backend/app/: __init__.py  deps.py  main.py
projects/longmen-inn-system/backend/app/api/: deps.py
projects/longmen-inn-system/backend/app/api/v1/: router.py
projects/longmen-inn-system/backend/app/api/v1/endpoints/: agent_workspace.py  agents.py  auth.py  daily_reports.py  data.py  files.py  longmenling.py  openclaw.py  projects.py  tasks.py
projects/longmen-inn-system/backend/app/cli/: __init__.py  __main__.py  ledger_generator.py
projects/longmen-inn-system/backend/app/core/: config.py  logging.py  security.py
projects/longmen-inn-system/backend/app/db/: __init__.py  base.py  import_production_data.py  init_data.py  init_db.py  models.py  session.py
projects/longmen-inn-system/backend/app/middleware/: __init__.py  error_handler.py  validation.py
projects/longmen-inn-system/backend/app/models/: __init__.py  user.py
projects/longmen-inn-system/backend/app/routers/: agent_workspace.py  audit_log.py
projects/longmen-inn-system/backend/app/schemas/: __init__.py  agent.py  agent_workspace.py  audit_log.py  longmenling.py  openclaw.py  project.py  task.py  user.py
projects/longmen-inn-system/backend/app/services/: __init__.py  data_collection_service.py  openclaw_service.py  openclaw_sync_service.py  session_parser.py
projects/longmen-inn-system/backend/app/websocket/: __init__.py  handler.py  manager.py
projects/longmen-inn-system/docs/: AGENT_SCENE_PROMPTS.md  API.md  ARCHITECTURE.md  CODE_AUDIT_REPORT.md  CODE_AUDIT_REPORT_v2.md  CODE_REVIEW.md  DATABASE.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  LEDGER.md  SECURITY.md  TESTING.md  WORKFLOW.md
projects/longmen-inn-system/frontend/: .eslintrc.json  .prettierrc  index.html  package-lock.json  package.json  start-frontend.bat  vite.config.ts
projects/longmen-inn-system/frontend/src/: App.css  App.tsx  index.css  main.tsx
projects/longmen-inn-system/frontend/src/components/: AgentPreviewModal.css  AgentPreviewModal.tsx
projects/longmen-inn-system/frontend/src/components/Layout/: MainLayout.css  MainLayout.tsx
projects/longmen-inn-system/frontend/src/components/auth/: ProtectedRoute.tsx
projects/longmen-inn-system/frontend/src/components/common/: ActivityFeed.css  ActivityFeed.tsx  AgentCard.css  AgentCard.tsx  AuditFeed.css  AuditFeed.tsx  KanbanBoard.css  KanbanBoard.tsx  LedgerEditor.tsx  ProjectCard.css  ProjectCard.tsx  RoleDetail.tsx  StatCard.css  StatCard.tsx  TaskCard.css  TaskCard.tsx  TaskWall.css  TaskWall.tsx
projects/longmen-inn-system/frontend/src/pages/: AINews.css  AINews.tsx  AgentWorkspace.css  AgentWorkspace.tsx  Agents.css  Agents.tsx  Dashboard.css  Dashboard.tsx  Intelligence.css  Intelligence.tsx  Login.css  Login.tsx  NewsPage.css  NewsPage.tsx  OpenClaw.css  OpenClaw.tsx  Profile.css  Profile.tsx  Projects.css  Projects.tsx  Ranking.css  Ranking.tsx  RedNews.css  RedNews.tsx  Settings.css  Settings.tsx  Tasks.css  Tasks.tsx  write_files.py
projects/longmen-inn-system/frontend/src/services/: agentService.ts  agentWorkspaceService.ts  api.ts  auditLogService.ts  fileService.ts  longmenlingService.ts  openclawService.ts  projectService.ts  taskService.ts
projects/longmen-inn-system/frontend/src/stores/: authStore.ts  index.ts
projects/longmen-inn-system/frontend/src/styles/: theme.css
projects/longmen-inn-system/frontend/src/types/: agent.ts  agentWorkspace.ts  auditLog.ts  index.ts  longmenling.ts  project.ts  task.ts
projects/longmen-inn-system/frontend/src/utils/: dateUtils.ts
roles/accountant/: IDENTITY.md  MEMORY_LOG.md  TOOL_BELT.md  VISION.md  WORK_STYLE.md  config.json
roles/accountant/skills/quality-assurance/: SKILL.md
roles/chef/: IDENTITY.md  MEMORY_LOG.md  TOOL_BELT.md  VISION.md  WORK_STYLE.md  config.json
roles/chef/skills/ci-cd-pipeline/: SKILL.md
roles/innkeeper/: IDENTITY.md  MEMORY_LOG.md  TOOL_BELT.md  VISION.md  WORK_STYLE.md  config.json
roles/main/: IDENTITY.md  MEMORY_LOG.md  TOOL_BELT.md  VISION.md  WORK_STYLE.md  config.json
roles/painter/: IDENTITY.md  MEMORY_LOG.md  TOOL_BELT.md  VISION.md  WORK_STYLE.md  config.json
roles/painter/skills/Baoyu-Image-Gen/.clawhub/: origin.json
roles/storyteller/: IDENTITY.md  MEMORY_LOG.md  TOOL_BELT.md  VISION.md  WORK_STYLE.md  config.json
roles/waiter/: IDENTITY.md  MEMORY_LOG.md  TOOL_BELT.md  VISION.md  WORK_STYLE.md  config.json
scripts/: pre-upload-check.ps1  sync-all-skills.bat  sync-skills.ps1
记忆流水账/: 2026-03-15-巡检记录.md
