[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longmen-inn-system"
version = "0.1.0"
description = "龙门客栈业务管理系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "structlog>=23.2.0",
    "sentry-sdk[fastapi]>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "httpx>=0.25.0",
    "asgi-lifespan>=2.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pylint>=3.0.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/longmen-inn/longmen-inn-system"
Documentation = "https://docs.longmen-inn.com"
Repository = "https://github.com/longmen-inn/longmen-inn-system.git"
Issues = "https://github.com/longmen-inn/longmen-inn-system/issues"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

# ==================== Black 配置 ====================
[tool.black]
target-version = ['py311', 'py312']
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # 默认排除
  \.d
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  # 项目特定
  | migrations
  | alembic
)/
'''

# ==================== isort 配置 ====================
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "**/migrations/**",
    "**/alembic/**",
]
known_first_party = ["app"]
known_third_party = [
    "fastapi",
    "sqlalchemy",
    "pydantic",
    "jose",
    "passlib",
]

# ==================== mypy 配置 ====================
[tool.mypy]
python_version = "3.11"
platform = "linux"

# 严格模式
strict = true

# 警告
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

# 错误检查
ignore_missing_imports = true
follow_imports = "skip"
show_error_codes = true
show_column_numbers = true
show_error_context = true

# 输出
pretty = true
color_output = true
error_summary = true

# 排除
exclude = [
    "^migrations/",
    "^alembic/",
    "^tests/",
    "^venv/",
    "^\.venv/",
]

# 模块特定配置
[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
    "jose.*",
    "passlib.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ==================== pytest 配置 ====================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
    "backend/tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "e2e: 端到端测试",
    "slow: 慢测试",
    "security: 安全测试",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
asyncio_mode = "auto"

# ==================== coverage 配置 ====================
[tool.coverage.run]
source = [
    "backend/app",
    "app",
]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/migrations/*",
    "*/alembic/*",
    "*/venv/*",
    "*/.venv/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "pass",
    "\.\.\\.",
]
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"
title = "Longmen Inn System Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

# ==================== bandit 配置 ====================
[tool.bandit]
exclude_dirs = [
    "tests",
    "venv",
    ".venv",
    "migrations",
    "alembic",
]
skips = [
    "B101",  # 测试assert
    "B311",  # 随机数检查（非加密用途）
]

# ==================== 项目特定配置 ====================
[tool.longmen]
name = "longmen-inn-system"
version = "0.1.0"
environment = "development"
